--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -26,10 +26,7 @@
         h3,
         h4,
         h5,
-        h6,
-            {
-            font-family: 'Raleway', sans-serif;
-        }  
+        h6, { font-family: 'Raleway', sans-serif;}  
 
         a,
         p {
