--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,4 +1,5 @@
-{% extends 'base/main.html' %} {% block content %}
+{% extends 'base/main.html' %}
+ {% block content %}
 
 <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
 <div class="header-bar">
@@ -8,8 +9,9 @@
     </div>
 
     {% if request.user.is_authenticated %}
-    <a href="{% url 'login' %}">Logout</a> {% else %}
-    <a href="{% url 'login' %}">Login</a> {% endif %}
+    <a href="{% url 'login' %}"> &#215;Logout</a> 
+    {% else %}
+    <a href="{% url 'login' %}"> Login</a> {% endif %}
 </div>
 
 
