--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -8,10 +8,11 @@
         <h3 style="margin:0">You have <i>{{count}}</i> incomplete task{{ count|pluralize:"s" }}</h3>
     </div>
 
-    {% if request.user.is_authenticated %}
+    {% if request.user.is_authenticated=True %}
     <a href="{% url 'login' %}"> &#215;Logout</a> 
     {% else %}
-    <a href="{% url 'login' %}"> Login</a> {% endif %}
+    <a href="{% url 'login' %}"> Login</a>
+    {% endif %}
 </div>
 
 
