--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -21,12 +21,12 @@
             padding-top: 50px;
         }
 
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6, { font-family: 'Raleway', sans-serif;}  
+        h1{ font-family: 'Raleway', sans-serif;} 
+        h2{ font-family: 'Raleway', sans-serif;} 
+        h3{ font-family: 'Raleway', sans-serif;} 
+        h4{ font-family: 'Raleway', sans-serif;} 
+        h5{ font-family: 'Raleway', sans-serif;} 
+        h6{ font-family: 'Raleway', sans-serif;} 
 
         a,
         p {
